--- a/references.bib
+++ b/references.bib
@@ -246,6 +246,19 @@
     publisher =	"Addison Wesley",
     year =		"1999"
 }
+@ARTICLE{Genuchten2014,
+    author={van Genuchten, M. and Mans, R. and Reijers, H. and Wismeijer, D.},
+    journal={Software, IEEE},
+    title={Is Your Upgrade Worth It? Process Mining Can Tell},
+    year={2014},
+    month={Sept},
+    volume={31},
+    number={5},
+    pages={94-100},
+    keywords={data mining;software maintenance;empirical data;event logs;medical software product;process mining;software industry;software product release;software updates;software upgrades;software vendors;Data mining;Software measurements;Usability;process mining;product metrics;usability},
+    doi={10.1109/MS.2014.20},
+    ISSN={0740-7459}
+}
 @ARTICLE{Giardino2014,
     author={Giardino, C. and Unterkalmsteiner, M. and Paternoster, N. and Gorschek, T. and Abrahamsson, P.},
     journal={Software, IEEE},
@@ -740,6 +753,13 @@
     edition={3rd},
     publisher={Jones \& Bartlett Publishers}
 }
+@book{vanderAalst2011,
+    title={Process Mining : Discovery, Conformance and Enhancement of Business Processes},
+    author={van der Aalst, Wil},
+    year={2011},
+    publisher={Springer},
+    address={ Heidelberg }
+}
 @article{vanderAalst2012,
     author = {van der Aalst, Wil},
     title = {Process Mining: Overview and Opportunities},
@@ -760,6 +780,22 @@
     address = {New York, NY, USA},
     keywords = {Process mining, business intelligence, business process management, data mining},
 } 
+@incollection{Werbach2014,
+    year={2014},
+    isbn={978-3-319-07126-8},
+    booktitle={Persuasive Technology},
+    volume={8462},
+    series={Lecture Notes in Computer Science},
+    editor={Spagnolli, Anna and Chittaro, Luca and Gamberini, Luciano},
+    doi={10.1007/978-3-319-07127-5_23},
+    title={(Re)Defining Gamification: A Process Approach},
+    url={http://dx.doi.org/10.1007/978-3-319-07127-5_23},
+    publisher={Springer International Publishing},
+    keywords={Gamification; games; persuasive design; persuasive technology},
+    author={Werbach, Kevin},
+    pages={266-272},
+    language={English}
+}
 @INPROCEEDINGS{Winter2013,
     author={Winter, V. and Reinke, C. and Guerrero, J.},
     booktitle={Emerging Trends in Software Metrics (WETSoM), 2013 4th International Workshop on},
