--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -5,6 +5,22 @@
 
 Anything can be measured \cite{Hubbard2010}.
 
+A metric can be defined as the science of indirect measurement.
+    The following are some examples of metrics that can be collected 
+    about source code:
+    \begin{itemize}
+        \item SLOC - The number of Source Lines of Code 
+        \item NOM - The Number of Methods per class
+        \item Complexity - A numerical measure of the code complexity,
+            some common examples are McCabe \cite{McCabe1976} and 
+            Halstead \cite{Halstead1977}
+        \item Design - The amount of coupling and cohesion present 
+        in the software code
+        \item Source Code Analysis - Tools that determine whether 
+        code adheres to specified set of rules. Common 
+        examples are PMD and findbugs.
+    \end{itemize}
+
 Data Driven Software Engineering not Data Driven Software Development
 
 Performance indicators can be crucial measurements
