--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -6,8 +6,7 @@
 
 In order for an SDO to properly track the elements of MPI, a data storage system should be available to store the appropriate data.   This storage system will be named the SDLC Analytic Engine (SDLC-AE). Figure \ref{fig:sdlc-ae} provides an overview of the data that could potentially be stored in the SDLC-AE.
 
-The SDLC-AE would make gamification of the SDLC attainable.  Prior attempts
-at gamification of the SDLC focus only on the development phase \cite{Dubois2013} \cite{Snipes2013}.
+The SDLC-AE would make gamification of the SDLC attainable.  
 
 \begin{figure}[ht]
 \includegraphics[scale=.7]{images/sdlc-ae.png}
