new version of PDF and some minor other changes

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -220,13 +220,13 @@
 
 %% The rest of the paper
 \subfile{paper_10_intro}
-%\subfile{paper_20_sdo}
-%\subfile{paper_30_measure}
-%\subfile{paper_40_mpi}
-%\subfile{paper_50_sdlc-ae}
+\subfile{paper_20_sdo}
+\subfile{paper_30_measure}
+\subfile{paper_40_mpi}
+\subfile{paper_50_sdlc-ae}
 %\subfile{paper_60_tooling}
-%\subfile{paper_70_case-study}
-%\subfile{paper_80_conclusion}
+\subfile{paper_70_case-study}
+\subfile{paper_80_conclusion}
 
 %% appendices
 \subfile{appendices}
