--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -47,7 +47,7 @@ This is the definition used for the remainder of this work.
         produced an updated version of the diagram seen in Figure \ref{fig:royce}
         which provides some loops to go back to a previous phase in the workflow.
     
-        \begin{figure}
+        \begin{figure}[ht]
             \centering
             \includegraphics[scale=.5]{images/benington_waterfall.PNG}
             \caption[Benington's original diagram for producing large software systems]
@@ -55,7 +55,7 @@ This is the definition used for the remainder of this work.
                         systems, adapted from \cite{Benington1987}}
             \label{fig:benington}
         \end{figure}%
-        \begin{figure}
+        \begin{figure}[ht]
             \centering
             \includegraphics[scale=.5]{images/royce_waterfall.PNG}
             \caption[Royce's version of the waterfall model]
@@ -69,7 +69,7 @@ This is the definition used for the remainder of this work.
         onto the next phase.  Some small amount of overlap is permitted and looping 
         occurs but both actions are discouraged and should be limited.  
         A modern diagram of the waterfall model can be seen in Figure \ref{fig:waterfall}.
-        \begin{figure}[here]
+        \begin{figure}[ht]
             \centering
             \includegraphics[scale=.6]{images/waterfall.png}
             \caption[Modern Waterfall]
