removed Background and Overview from section 1

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -26,18 +26,15 @@
     rather form a historical baseline for a specific organization.  Also, a software
     system to collect, calculate, and report the score will be presented.
 
-\subsection{BACKGROUND}
+%\subsection{OVERVIEW}
 
-    Throughout the history of software development, many values have been 
-    collected and used to measure the effectiveness of software development. 
+%    Throughout the history of software development, many values have been 
+%    collected and used to measure the effectiveness of software development. 
 
-
-\subsection{OVERVIEW}
-
-    What is the goal? how will it help?  Expand on the thesis statement here
-    score the overall organization
-    produce a single a number score
-    don't focus too heavily on the source code
+%    What is the goal? how will it help?  Expand on the thesis statement here
+%    score the overall organization
+%    produce a single a number score
+%    don't focus too heavily on the source code
 
 
 
