remove some stuff

--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -19,10 +19,6 @@ This is the definition used for the remainder of this work.
 
 
 \subsection{THE SOFTWARE DEVELOPMENT LIFECYCLE}
-    For this question, I choose to rewrite that section of the proposal.  This was
-    my favorite question. It forced me to go look back into the history of
-    software development. 
-    
     The discipline of software engineering has created a workflow for developing
     software.  
     This workflow is called the \textit{Software Development Life Cycle (SDLC)}.
@@ -210,7 +206,6 @@ This is the definition used for the remainder of this work.
             \cite{Jones2009}.  Also in here is the 4 severity levels.  Also, current defect removal is only about 85\% and this value should be increased to about 95\%. 
 \end{description}
 
-Check these book \cite{Jones2009, Jones1996, Lee2003}. This might be similar
-to process mining \cite{vanderAalst2012}.  
+Check these book \cite{Jones2009, Jones1996, Lee2003}. 
 
 \end{document}
